--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -10,7 +13,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercato | Login</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -67,7 +70,8 @@
                         </div>
                         <div class="row">
                             <div class="col s12">
-                                <button class="btn blue darken-1 waves-effect waves-light" type="submit" name="action">Iniciar Sesión</button>
+                                <!-- <button class="btn blue darken-1 waves-effect waves-light" type="submit" name="action">Iniciar Sesión</button> -->
+                                <a href="presentation.html" class="btn blue darken-1 waves-effect waves-light" type="submit" name="action">Iniciar Sesión</a>
                             </div>
                             <div class="col s12 text-center pt10">
                                 <a href="" class="black-text ">Olvide mi contraseña</a>
@@ -93,7 +97,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
