--- a/presentation.html
+++ b/presentation.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -10,7 +13,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercato | Login</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -18,24 +21,24 @@
         <section class="carousel">
             <div class="carousel carousel-slider center">
                 <div class="carousel-fixed-item center">
-                  <a class="btn blue darken-1 white-text waves-effect white grey-text darken-text-2">SIGUIENTE</a>
+                  <a href="dashboard.html" class="btn blue darken-1 white-text waves-effect white grey-text darken-text-2">SIGUIENTE</a>
                 </div>
                 <div class="carousel-item white white-text" href="#one!">
-                  <img src="/assets/images/carousel/carousel1.jpg" alt="">
+                  <img src="assets/images/carousel/carousel1.jpg" alt="">
                   <div class="content">
                       <h2 class="black-text m0">Mercato</h2>
                       <p class="grey-text text-darken-2 m0">La red de distribuidores más <br> importantes del país</p>
                   </div>
                 </div>
                 <div class="carousel-item white white-text" href="#two!">
-                    <img src="/assets/images/carousel/carousel2.jpg" alt="">
+                    <img src="assets/images/carousel/carousel2.jpg" alt="">
                     <div class="content">
                         <h2 class="black-text m0">Mercato</h2>
                         <p class="grey-text text-darken-2 m0">La red de distribuidores más <br> importantes del país</p>
                     </div>
                 </div>
                 <div class="carousel-item white white-text" href="#three!">
-                    <img src="/assets/images/carousel/carousel3.jpg" alt="">
+                    <img src="assets/images/carousel/carousel3.jpg" alt="">
                     <div class="content">
                         <h2 class="black-text m0">Mercato</h2>
                         <p class="grey-text text-darken-2 m0">La red de distribuidores más <br> importantes del país</p>
@@ -54,7 +57,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
