--- a/productos.html
+++ b/productos.html
@@ -18,10 +18,12 @@
 </head>
 
 <body>
+    
+
     <section class="header">
         <nav>
             <div class="nav-wrapper blue darken-1">
-                <a href="javascript:void(0);" class="brand-logo left ml50">Rubros activos</a>
+                <a href="javascript:void(0);" class="brand-logo left ml50">Santo Domingo S.A.</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right tools">
                     <li class="pl0 pr0"><a href="#" data-target="search" class="sidenav-trigger pl0 pr0"><i class="material-icons">search</i></a></li>
@@ -85,93 +87,89 @@
                     <i class="material-icons right white-text">more_vert</i>
                 </div>
             </div>
-            <div class="grid-content">
-                <div style="width: 95%;" class="container">
+            <div class="grid-content products-list">
+                <div style="width: 95%;" class="container pt10">
                     <div class="row">
+
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
                         <div class="col s12 p0">
-                            <div class="box product">
-                                <div class="carousel carousel-slider">
-                                    <div class="carousel-fixed-item center">
-                                        <p class="m0">SANTO DOMINGO S.A.</p>
-                                    </div>
-                                    <div class="carousel-item grey lighten-3" href="#one!">
-                                        <h4 class="grey-text">Producto name</h4>
-                                        <p class="gray-text darken-4">NUevo lanzamiento</p>
-                                    </div>
-                                    <div class="carousel-item grey lighten-3" href="#two!">
-                                        <h4 class="grey-text">Producto name</h4>
-                                        <p class="gray-text darken-4">NUevo lanzamiento</p>
-
-                                    </div>
-                                    <div class="carousel-item grey lighten-3" href="#three!">
-                                        <h4 class="grey-text">Producto name</h4>
-                                        <p class="gray-text darken-4">NUevo lanzamiento</p>
-
-                                    </div>
-                                    <div class="carousel-item grey lighten-3" href="#four!">
-                                        <h4 class="grey-text">Producto name</h4>
-                                        <p class="gray-text darken-4">NUevo lanzamiento</p>
-
-                                    </div>
+                            <div class="box-product-list">
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+                                <div class="p-content">
+                                    <h5 class="name">Product Name</h5>
+                                    <p class="category">Category A</p>
+                                    <p class="price"> <span class="discount">Gs. 6.000</span> Gs. 5.5000</p>
+                                    <div class="icon-left"><i class="material-icons">local_grocery_store</i></div>
                                 </div>
                             </div>
                         </div>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
 
-                        <!-- LOOT DE PRODUCTOS -->
-
-                        <div class="col s6 p0">
-                            <div class="box product">
-                                <article class="product">
-                                    <figure><img
-                                            src="https://clustersantander.com/imagenes/vco_noticias//noti_92cf30466fc9fa8448c360db88d922034c415e3d.jpg"
-                                            alt=""></figure>
-                                    <div class="footer-product">
-                                        <h4>Nombre Empresa</h4>
-                                        <p class="state success"><span></span>Linea de Crédito Disponible</p>
-                                        <p class="category">Rubro A</p>
-                                    </div>
-                                </article>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
+                        <div class="col s12 p0">
+                            <div class="box-product-list">
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+                                <div class="p-content">
+                                    <h5 class="name">Product Name</h5>
+                                    <p class="category">Category A</p>
+                                    <p class="price"> <span class="discount">Gs. 6.000</span> Gs. 5.5000</p>
+                                    <div class="icon-left"><i class="material-icons">local_grocery_store</i></div>
+                                </div>
                             </div>
                         </div>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
 
-                        <div class="col s6 p0">
-                            <div class="box product">
-                                <article class="product">
-                                    <figure><img src="" alt=""></figure>
-                                    <div class="footer-product">
-                                        <h4>Nombre Empresa</h4>
-                                        <p class="state success"><span></span>Linea de Crédito Disponible</p>
-                                        <p class="category">Rubro A</p>
-                                    </div>
-                                </article>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
+                        <div class="col s12 p0">
+                            <div class="box-product-list">
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+                                <div class="p-content">
+                                    <h5 class="name">Product Name</h5>
+                                    <p class="category">Category A</p>
+                                    <p class="price"> <span class="discount">Gs. 6.000</span> Gs. 5.5000</p>
+                                    <div class="icon-left"><i class="material-icons">local_grocery_store</i></div>
+                                </div>
                             </div>
                         </div>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
 
-                        <div class="col s6 p0">
-                            <div class="box product">
-                                <article class="product">
-                                    <figure><img src="" alt=""></figure>
-                                    <div class="footer-product">
-                                        <h4>Nombre Empresa</h4>
-                                        <p class="state danger"><span></span>Linea de Crédito Disponible</p>
-                                        <p class="category">Rubro A</p>
-                                    </div>
-                                </article>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
+                        <div class="col s12 p0">
+                            <div class="box-product-list">
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+                                <div class="p-content">
+                                    <h5 class="name">Product Name</h5>
+                                    <p class="category">Category A</p>
+                                    <p class="price"> <span class="discount">Gs. 6.000</span> Gs. 5.5000</p>
+                                    <div class="icon-left"><i class="material-icons">local_grocery_store</i></div>
+                                </div>
                             </div>
                         </div>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
 
-                        <div class="col s6 p0">
-                            <div class="box product">
-                                <article class="product">
-                                    <figure><img src="" alt=""></figure>
-                                    <div class="footer-product">
-                                        <h4>Nombre Empresa</h4>
-                                        <p class="state warning"><span></span>Linea de Crédito Disponible</p>
-                                        <p class="category">Rubro A</p>
-                                    </div>
-                                </article>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
+                        <div class="col s12 p0">
+                            <div class="box-product-list">
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+                                <div class="p-content">
+                                    <h5 class="name">Product Name</h5>
+                                    <p class="category">Category A</p>
+                                    <p class="price"> <span class="discount">Gs. 6.000</span> Gs. 5.5000</p>
+                                    <div class="icon-left"><i class="material-icons">local_grocery_store</i></div>
+                                </div>
                             </div>
                         </div>
+                        <!-- LIST ITEM LOOP !!!!IMPORTANT -->
 
                     </div>
                 </div>
